(feat) edit medications page

--- a/server/public/app/components/medications/view-medications.html
+++ b/server/public/app/components/medications/view-medications.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="med-controls">
-          <span class="edit" ng-click="editMeds(medication.id)">Edit</span>
+          <span class="edit" ng-click="editItem(medication)">Edit</span>
           <span class="delete" ng-click="deleteItem(medication.id, $index)">Delete</span>
         </div>
 
